--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     </td>
                     <td valign=TOP>
                         <h1>rcknplyr</h1>
-                        <em>web developer</em>
+                        <em>developer</em>
                     </td>
                 </tr>
             </tbody>
