--- a/index.html
+++ b/index.html
@@ -66,19 +66,23 @@
             <thead></thead>
             <tbody>
                 <tr>
-                    <td>HTML</td>
+                    <td>HTML/CSS</td>
                     <td>⭑</td>
                 </tr>
                 <tr>
-                    <td>CSS</td>
+                    <td>JavaScript</td>
                     <td>⭑</td>
                 </tr>
                 <tr>
-                    <td>Javascript</td>
+                    <td>React</td>
                     <td>⭑</td>
                 </tr>
                 <tr>
-                    <td>Express</td>
+                    <td>TypeScript</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Git</td>
                     <td>⭑</td>
                 </tr>
             </tbody>
